[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cyclistsocialforce"
description = "Microscopic simulation of cyclist interactions on intersections with compatibility to Eclipse SUMO"
readme = "README.md"
version = "0.1.1"
license = {file = "LICENSE"}
authors = [
	{name = "Christoph M. Schmidt", email = "c.m.schmidt@tudelft.nl"}
]
requires-python = ">3.9"
dependencies = [
	"numpy >= 1.25",
	"matplotlib >= 3.7",
	"scipy >= 1.10",
	"sumolib",
	"traci",
]
	
[tool.setuptools.packages.find]
where = ["src"]  
